# wemake-python-package

./: README.md  cookiecutter.json  setup.cfg
.github/workflows/: test.yml
hooks/: post_gen_project.py
tests/: test_project_generation.py
{{cookiecutter.project_name}}/: Makefile  pyproject.toml  setup copy.cfg  setup.cfg
