[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_description }}"
version = "0.1.0"
license = "{{ cookiecutter.license|upper }}"

authors = []

readme = "README.md"

repository = "https://github.com/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]

nitpick = "^0.32"

safety = "^2.3"

pytest = "^7.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"
